--- a/package.json
+++ b/package.json
@@ -4,7 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node jasmine.js",
+    "build": "tsc"
+  },
+  "dependencies": {
+    "@types/node": "^10.12.18",
+    "@types/npm": "^2.0.29",
+    "inversify": "^5.0.1",
+    "npm": "^6.5.0",
+    "rxjs": "6.3.2",
+    "tslib": "^1.9.1"
+  },
+  "devDependencies": {
+    "@types/jasmine": "^2.8.7",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-reporters": "^2.3.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-ts": "^0.2.1",
+    "karma": "~2.0.0",
+    "tmp": "0.0.33",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^1.2.0",
+    "protractor": "^5.3.1",
+    "ts-node": "^4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "^2.6.2"
   },
   "author": "amorscher",
   "license": "ISC"
