support testing of npm package registry
-refactored to use NpmExecution as a base for all process
-added example test using a mock of the registry
-corrected searchlimit and added test

removed test-results folder for git

Added global formattings

ignore spec(test) files for production build

updated tests to use common test fixture for mocking npm calls

Separate runs for integration and unit tests

Added custom exceptions for arguments and json parsing

-added tests for exceptions
-improved testing framework

added coverage information

added tests for process communication

-add mock for spawn function

initial configuration of dependency injection using inversify

corrected typo

updated di configuration

-moved all bindings to their corresponding package

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "ts-node jasmine.js",
+    "unittest": "ts-node jasmine.js unit",
+    "coverage": "ts-node node_modules/istanbul/lib/cli.js cover -e .ts -x \"*.d.ts\" -x \"*.spec.ts\" jasmine.js",
+    "e2e": "ts-node jasmine.js e2e",
     "build": "tsc"
   },
   "dependencies": {
@@ -12,10 +15,12 @@
     "@types/npm": "^2.0.29",
     "inversify": "^5.0.1",
     "npm": "^6.5.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "6.3.3",
     "tslib": "^1.9.1"
   },
   "devDependencies": {
+    "istanbul": "^1.1.0-alpha.1",
     "@types/jasmine": "^3.3.5",
     "jasmine": "^3.1.0",
     "jasmine-core": "~3.3.0",
