--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,13 +9,22 @@
             "name": "Current TS Tests File",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index.js",
-            "args": ["${relativeFile}"],
+            "program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
+            "args": ["${relativeFile}","--config=./jasmine.json"],
             "cwd": "${workspaceRoot}",
             "internalConsoleOptions": "openOnSessionStart",
             "console": "integratedTerminal",
             "outputCapture":"console"
         },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jasmine Current File",
+            "program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
+            "args": ["${file}"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
+       }
         {
             "name": "Current TS File",
             "type": "node",
